Refactor and update mc3p codebase for modern python versions
- Updated copyright information to include AmirAli Mollaei.
- Changed string concatenation to bytes concatenation in multiple files for better performance with binary data.
- Replaced `asyncore` with `asyncio` for asynchronous networking in the DVR plugin and proxy.
- Improved error handling and logging throughout the codebase.
- Updated the `with_defaults` function to use `sys.maxsize` instead of `sys.maxint` for compatibility with Python 3.
- Refactored the `emit` functions to return bytes instead of strings.
- Enhanced the `parse_metadata` function to improve readability and maintainability.
- Updated setup.py to reflect new versioning and author information.
- General code cleanup and modernization to adhere to Python 3 standards.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.4pre
+- updated codebase to modern python versions and removed python 2 compatibility
+
 0.2pre
 - support for protocol versions 17-21 (Up through 1.9pre5)
 - Windows now supported (tested with CPython 2.7)
@@ -7,4 +10,3 @@
 - support for protocol version 17 (Minecraft Beta 1.8)
 - basic plugin support
 - linux/OS X only
-
